--- a/assets/styles/contactanos.css
+++ b/assets/styles/contactanos.css
@@ -20,22 +20,29 @@ body {
     position: sticky;
     top: 0;
 }
-.logo { /* Estilo para el logo en la barra de navegación */
+
+.logo {
+    /* Estilo para el logo en la barra de navegación */
     margin-left: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 150px;
     text-align: left;
 }
-.containerProfile { /* Estilo para el contenedor del perfil en la barra de navegación */
+
+.containerProfile {
+    /* Estilo para el contenedor del perfil en la barra de navegación */
     margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
-.perfil {   /* Estilo para la imagen de perfil en la barra de navegación */
+
+.perfil {
+    /* Estilo para la imagen de perfil en la barra de navegación */
     width: 45px;
     border-radius: 50%
 }
+
 /* Estilo para el menú de configuración */
 .config-menu {
     display: none;
@@ -46,22 +53,30 @@ body {
     box-shadow: 0 0 10px #000000;
     z-index: 1;
 }
-.config-menu ul {   /* Estilo para la lista del menú de configuración */
+
+.config-menu ul {
+    /* Estilo para la lista del menú de configuración */
     list-style: none;
     padding: 0;
     margin: 0;
 }
-.config-menu ul li {    /* Estilo para los items del menú de configuración */
+
+.config-menu ul li {
+    /* Estilo para los items del menú de configuración */
     padding: 10px;
     text-align: left;
 }
-.config-menu ul li a {  /* Estilo para los links del menú de configuración */
+
+.config-menu ul li a {
+    /* Estilo para los links del menú de configuración */
     text-decoration: none;
     color: #000000;
     display: block;
     font-size: medium;
 }
-.config-menu ul li a:hover {    /* color de fondo al pasar el ratón */
+
+.config-menu ul li a:hover {
+    /* color de fondo al pasar el ratón */
     background-color: #e425282a;
 }
 
@@ -74,23 +89,31 @@ body {
     border-radius: 30px;
     opacity: 0.8;
     padding: 10px 50px;
-    margin: 20px auto; 
+    margin: 20px auto;
 }
-#title-contact {    /* Estilo para el título del formulario */
+
+#title-contact {
+    /* Estilo para el título del formulario */
     font-weight: 600;
     font-size: 30px;
     text-align: center;
     color: #e42527;
     margin: 20px 0;
 }
-#input-comment {    /* Estilo para el input de comentario */
+
+#input-comment {
+    /* Estilo para el input de comentario */
     height: auto;
     min-height: 50px;
 }
-#btn-register { /* Estilo para el botón de enviar */
+
+#btn-register {
+    /* Estilo para el botón de enviar */
     margin: 20px 0;
 }
-.form-floating label {  /* Estilo para el label de los inputs */
+
+.form-floating label {
+    /* Estilo para el label de los inputs */
     color: black;
 }
 
@@ -104,30 +127,42 @@ footer {
     position: absolute;
     width: 100%;
 }
-.footer-container { /* Contenedor principal del footer */
+
+.footer-container {
+    /* Contenedor principal del footer */
     display: grid;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-.footerlogo {   /* Estilo para el logo en el footer */
+
+.footerlogo {
+    /* Estilo para el logo en el footer */
     width: 100px;
     margin: 0 auto;
 }
-.divider {  /* Estilo para las divisiones entre el logo y los íconos */
+
+.divider {
+    /* Estilo para las divisiones entre el logo y los íconos */
     margin-top: 10px;
     width: 100%;
     height: 5px;
     background-color: rgb(0, 0, 0);
 }
-.social-icons { /* Estilo para los íconos de redes sociales */
+
+.social-icons {
+    /* Estilo para los íconos de redes sociales */
     margin-top: 20px;
 }
-.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
+
+.social-icon img {
+    /* Estilo para las imágenes de íconos de redes sociales */
     width: 30px;
     height: 30px;
 }
-.links a {  /* Estilo para los links del footer */
+
+.links a {
+    /* Estilo para los links del footer */
     text-decoration: none;
     color: black;
     font-size: medium;
