--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -3,17 +3,6 @@ html {
     font-family: 'Poppins', sans-serif;
 }
 
-body {
-    background-color: black;
-    overflow-x: hidden;
-}
-
-h1 {
-    color: white;
-    text-align: center;
-    font-family: 'Poppins';
-}
-
 
 /* Barra de navegación */
 .custom-navbar {
@@ -47,6 +36,8 @@ h1 {
     background-color: #5d5d5d;
     box-shadow: 0 0 10px #000000;
     z-index: 1;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 .config-menu ul {   /* Estilo para la lista del menú de configuración */
     list-style: none;
@@ -64,18 +55,30 @@ h1 {
     font-size:large;
 }
 .config-menu ul li a:hover {    /* color de fondo al pasar el ratón */
-    background-color: #e4252770;
+    background-color: #e425282a;
+}
+
+
+body { /*ESTILOS DE BODY*/
+    background-color: black;
+    overflow-x: hidden;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    font-family: 'Poppins';
 }
 
 
 
-/*carrusel*/
+/*ESTILOS DEL CARRUSEL*/
 #cardCarousel {
     padding: 20px;
     /* Añade espaciado interior para separar el carrusel de otros elementos */
 }
 
-.container .card {
+.container .card {  /* estilos para container */
     z-index: 0;
     /*Add this*/
     position: relative;
@@ -83,14 +86,13 @@ h1 {
     margin: 20px;
 }
 
-.container .card .face {
+.container .card .face { /*front card*/
     width: 300px;
     height: 200px;
     transition: .4s;
-
 }
 
-.container .card .face.face1 {
+.container .card .face.face1 { /*front card*/
     position: relative;
     background: #333;
     display: flex;
@@ -101,7 +103,7 @@ h1 {
     transform: translateY(100px);
 }
 
-.container .card:hover .face.face1 {
+.container .card:hover .face.face1 { /*front card*/
     transform: translateY(0);
     box-shadow:
         inset 0 0 60px #00000065,
@@ -112,35 +114,28 @@ h1 {
         0 0 50px #ffffff2f,
         -10px 0 80px rgb(255, 0, 0),
         10px 0 80px #a8a8a8;
-
 }
-
 
 .container .card .face.face1 .content {
     opacity: .8;
     transition: 0.5s;
     text-align: center;
-
 }
 
 .container .card:hover .face.face1 .content {
     opacity: 1;
-
 }
 
 .container .card .face.face1 .content i {
     font-size: 3em;
     color: rgb(9, 9, 9);
     display: inline-block;
-
 }
 
 .container .card .face.face1 .content h3 {
     font-size: 1em;
     color: white;
     text-align: center;
-
-
 }
 
 .container .card .face.face1 .content a {
@@ -162,8 +157,6 @@ h1 {
 
 .container .card:hover .face.face2 {
     transform: translateY(0);
-
-
 }
 
 .container .card .face.face2 .content p,
@@ -191,7 +184,6 @@ a {
 }
 
 @media (max-width: 767px) {
-
     .carousel-inner .carousel-item>div {
         display: none;
     }
@@ -204,7 +196,6 @@ a {
 
 /* medium and up screens */
 @media (min-width: 768px) {
-
     .carousel-inner .carousel-item-end.active,
     .carousel-inner .carousel-item-next {
         transform: translateX(25%);
@@ -221,19 +212,16 @@ a {
     transform: translateX(0);
 }
 
-
 .carousel-inner .carousel-item.active,
 .carousel-inner .carousel-item-next,
 .carousel-inner .carousel-item-prev {
     display: flex;
 }
 
-
 #vision {
     width: 500px;
     height: 400px;
     padding-left: 30px;
-
 }
 
 #mision {
