--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -101,6 +101,16 @@ body {
     margin-inline: 10px 30px;
 }
 
+.profile-img {
+    /* Estilo para el contenedor del perfil en la barra de navegación */
+    margin: 5px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%
+}
+
+
+
 
 .TextosLanding {
     text-align: center;
