--- a/assets/styles/stylesProfile.css
+++ b/assets/styles/stylesProfile.css
@@ -76,50 +76,51 @@ body {
 
 
 /* Personal info */
-.containerFondoPerfil {
-    height: 400px;
-    /* Alto deseado del contenedor */
+.contSuperior {
+    margin-top: -55px;
+    height: 550px;
     overflow: hidden;
-    position: relative;
-    margin-top: -120px;
     z-index: -1;
 }
-
-.fondoPerfil {
-    width: 100%;
+.contProfileBack {  /*Contenedor de la imagen de fondo*/
     position: relative;
-    margin-top: -200px;
+    height: 450px;
+    z-index: 1;
 }
-
-.containerFotoPerfil {
-    margin-top: -100px;
-    margin-left: 100px;
+.contProfileBack img {  /*Imagen de fondo*/
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-
-.containerFotoPerfil img {
+.contProfilePick {  /*Contenedor de la imagen de perfil*/
+    position: absolute;
+    top: 350px;
+    left: 50px;
+    z-index: 2;
+}
+.contProfilePick img {  /*Imagen de perfil*/
     border-radius: 50%;
     width: 200px;
 }
-
-.containerNickname {
-    margin-top: -105px;
-    margin-left: 320px;
+.contNickname { /*Contenedor del nickname*/
+    position: absolute;
+    top: 450px;
+    left: 260px;
+    z-index: 2;
 }
-
-.containerNickname h1 {
+.contNickname h1 {  /*Nickname*/
     color: white;
     font-size: 40px;
     font-weight: bold;
 }
 
-.col-xl-6 {
-    margin-top: 60px;
-}
 
+.row {
+    margin-top: 10px;
+}
 .containerJuegosLogros h2 {
     margin-left: 50px;
 }
-
 .menuJuegos {
     list-style-type: none;
     padding: 0;
