--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -18,88 +18,71 @@ body {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #8a8a8a80;
+    background-color: #000000;
     position: sticky;
     top: 0;
     z-index: 1;
 }
-
-.logo {
-    /* Estilo para el logo en la barra de navegación */
+.logo { /* Estilo para el logo en la barra de navegación */
     margin-left: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 150px;
     text-align: left;
 }
-
-.containerProfile {
-    /* Estilo para el contenedor del perfil en la barra de navegación */
+.containerProfile { /* Estilo para el contenedor del perfil en la barra de navegación */
     margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
-
-.perfil {
-    /* Estilo para la imagen de perfil en la barra de navegación */
+.perfil {   /* Estilo para la imagen de perfil en la barra de navegación */
     width: 45px;
     border-radius: 50%
 }
-
 /* Estilo para el menú de configuración */
 .config-menu {
     display: none;
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: #5d5d5dd0;
-    box-shadow: 0 0 10px #000000;
+    background-color: #000000;
+    box-shadow: 0 0 10px #e42527;
     z-index: 1;
     border-radius: 5px;
     margin-right: 10px;
 }
-
-.config-menu ul {
-    /* Estilo para la lista del menú de configuración */
+.config-menu ul {   /* Estilo para la lista del menú de configuración */
     list-style: none;
     padding: 0;
     margin: 0;
     width: 260px;
 }
-
-.config-menu ul li {
-    /* Estilo para los items del menú de configuración */
+.config-menu ul li {    /* Estilo para los items del menú de configuración */
     padding: 10px;
     text-align: left;
     align-items: center;
 }
-
-.config-menu ul li:hover {
-    /* color de fondo al pasar el ratón */
+.config-menu ul li:hover {    /* color de fondo al pasar el ratón */
     background-color: #e4252846;
     border-radius: 5px;
     margin: 5px;
 }
-
-.config-menu ul li a {
-    /* Estilo para los links del menú de configuración */
+.config-menu ul li a {  /* Estilo para los links del menú de configuración */
     text-decoration: none;
     color: #ffffff;
     font-size: large;
 }
-
-.config-menu ul li img {
-    /* Estilo para los iconos del menú de configuración */
+.config-menu ul li img{    /* Estilo para los iconos del menú de configuración */
     height: 20px;
     margin-bottom: 5px;
 }
-
-.config-menu ul hr {
-    /* color de fondo al pasar el ratón */
+.config-menu ul hr {    /* color de fondo al pasar el ratón */
     margin: 5px 0;
     border: solid 2px #000000;
     margin-inline: 10px 30px;
 }
+/*termiman estilos de navbar*/
+
 
 .profile-img {
     /* Estilo para el contenedor del perfil en la barra de navegación */
@@ -216,37 +199,6 @@ body {
 }
 
 
-
-/* Estilo para el footer */
-footer {
-    background-color: #a8a8a8;
-    color: white;
-    padding: 10px;
-    margin-top: 20px;
-}
-
-/* Contenedor principal del footer */
-.footer-container {
-    display: grid;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-/* Estilo para el logo en el footer */
-.footerlogo {
-    width: 100px;
-    margin: 0 auto;
-    /* Centrar horizontalmente */
-}
-
-/* Estilo para las divisiones entre el logo y los íconos */
-.divider {
-    margin-top: 10px;
-    width: 100%;
-    height: 5px;
-    background-color: rgb(0, 0, 0);
-}
 
 /* Estilo para los íconos de redes sociales */
 .social-icons {
