--- a/assets/styles/formulario.css
+++ b/assets/styles/formulario.css
@@ -1,15 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins:wght@400;600;700&display=swap');
+/* Fuentes para todo el documento */
+html {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
 
 body {
-    background-image: url("../images/img_registrarUX/BackImg_Dskp_Or.jpg");
+    background-image: url("../images/fondoNegroConRojo.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
-    color: white;
-    font-family: 'Bree Serif', serif;
-    font-family: 'Poppins', sans-serif;
+    color: rgb(0, 0, 0);
     overflow-x: hidden;
+    
 }
 
 .background {
@@ -25,7 +27,7 @@ body {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #8a8a8a80;
+    background-color: #000000;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -52,8 +54,8 @@ body {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: #5d5d5dd0;
-    box-shadow: 0 0 10px #000000;
+    background-color: #000000;
+    box-shadow: 0 0 10px #e42527;
     z-index: 1;
     border-radius: 5px;
     margin-right: 10px;
@@ -92,9 +94,10 @@ body {
 
 
 
+
 /*Estilos para formulario*/
 .tarjeta {
-    background-color: transparent;
+    background-color: black;
     text-align: center;
     padding: 10px 50px;
 }
@@ -135,40 +138,3 @@ body {
 
 
 
-/* Estilo para el footer */
-footer {
-    background-color: #8a8a8a80;
-    padding: 10px;
-    margin-top: 20px;
-    bottom: 0;
-    width: 100%;
-}
-.footer-container { /* Contenedor principal del footer */
-    display: grid;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-.footerlogo {   /* Estilo para el logo en el footer */
-    width: 100px;
-    margin: 0 auto;
-}
-.divider {  /* Estilo para las divisiones entre el logo y los íconos */
-    margin-top: 10px;
-    width: 100%;
-    height: 5px;
-    background-color: rgb(0, 0, 0);
-}
-.social-icons { /* Estilo para los íconos de redes sociales */
-    margin-top: 20px;
-}
-.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
-    width: 30px;
-    height: 30px;
-}
-.links a {  /* Estilo para los links del footer */
-    text-decoration: none;
-    color: black;
-    font-size: medium;
-    font-weight: bold;
-}
