--- a/assets/styles/page404.css
+++ b/assets/styles/page404.css
@@ -6,7 +6,7 @@ html {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #8a8a8a80;
+    background-color: #000000;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -33,8 +33,8 @@ html {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: #5d5d5dd0;
-    box-shadow: 0 0 10px #000000;
+    background-color: #000000;
+    box-shadow: 0 0 10px #e42527;
     z-index: 1;
     border-radius: 5px;
     margin-right: 10px;
@@ -69,6 +69,8 @@ html {
     border: solid 2px #000000;
     margin-inline: 10px 30px;
 }
+/*termiman estilos de navbar*/
+
 
 /*ESTILOS DE BODY*/
 body { 
@@ -76,26 +78,67 @@ body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
+    text-align: center;
+    /*background-image: url(../images/nes\(1\)\ \(1\).jpg);
+    /*background-size: cover; /* Ajusta el tamaño de fondo para cubrir completamente el elemento padre */
+    /*background-position: center center; /* Centra la imagen de fondo horizontal y verticalmente */
+    /*background-repeat: no-repeat; /* Evita que la imagen de fondo se repita */
 }
-.conten{
+
+.conten {
+    margin-top: 100px;
+    font-size: 90px;
+    color: #ffffff;
+    font-family: 'Poppins';
+}
+
+.conten-description {
+    margin-top: 20px;
+}
+
+.error {
+    font-size: 50px;
+    color: #a8a8a8;
+    font-family: 'Poppins';
+    margin-top: 50px;
+}
+
+.conten-error {
+    font-size: 22px;
+    color: #777;
+    font-family: 'Montserrat';
+    margin-top: 90px;
+}
+
+
+@media screen and (max-width: 768px) {
+    /* Estilos para pantallas pequeñas (menos de 768px de ancho) */
+    .conten {
+        font-size: 10vw; /* Tamaño de fuente más grande para pantallas pequeñas */
+    }
+
+    .conten-description {
+        margin-top: 10%;
+    }
+
+    .error {
+        font-size: 5vw;
+    }
+
+    .conten-error {
+        font-size: 3vw;
+    }
+}
+
+
+
+/*.conten{
     position: fixed;
     top: 65px;
     width: 100%;
     text-align: center;
     }
 
-
-.conten-img{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-}
-/*.backimg{
-    width: 550px;
-    display: block;
-    animation: animates 2s linear infinite alternate;
-}*/
 .conten-number{
     position: absolute;
     font-size: 5.5rem;
@@ -126,26 +169,26 @@ body {
 
 
 
-.backimg {
+/*.backimg {
     width: 550px;
     display: block;
     animation: parpadeo 1s linear infinite;
     filter: drop-shadow( 5px 5px 10px #000 );
 
-}
+}*/
 
 
-@keyframes parpadeo {
+/*@keyframes parpadeo {
     0% {
         background-color: transparent; /* Estado inicial sin fondo */
-    }
-    50% {
+   /* } 
+    50% { 
         background-color: rgb(19, 18, 18); /* Cambia el fondo a un color brillante en la mitad de la animación */
-    }
+  /*  }
     100% {
         background-color: transparent; /* Vuelve al estado inicial sin fondo al final */
-    }
-}
+ /*   }
+/*}
 
 
 
