--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -6,7 +6,7 @@ html {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #8a8a8a80;
+    background-color: #000000;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -33,8 +33,8 @@ html {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: #5d5d5dd0;
-    box-shadow: 0 0 10px #000000;
+    background-color: #000000;
+    box-shadow: 0 0 10px #e42527;
     z-index: 1;
     border-radius: 5px;
     margin-right: 10px;
@@ -69,10 +69,11 @@ html {
     border: solid 2px #000000;
     margin-inline: 10px 30px;
 }
+/*termiman estilos de navbar*/
 
 
 body { /*ESTILOS DE BODY*/
-    background-color: black;
+    background-color: #000000ef;
     overflow-x: hidden;
 }
 
@@ -267,40 +268,3 @@ h3 {
 
 
 
-/* Estilo para el footer */
-footer {
-    background-color: #8a8a8a80;
-    padding: 10px;
-    margin-top: 20px;
-    bottom: 0;
-    width: 100%;
-}
-.footer-container { /* Contenedor principal del footer */
-    display: grid;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-.footerlogo {   /* Estilo para el logo en el footer */
-    width: 100px;
-    margin: 0 auto;
-}
-.divider {  /* Estilo para las divisiones entre el logo y los íconos */
-    margin-top: 10px;
-    width: 100%;
-    height: 5px;
-    background-color: rgb(0, 0, 0);
-}
-.social-icons { /* Estilo para los íconos de redes sociales */
-    margin-top: 20px;
-}
-.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
-    width: 30px;
-    height: 30px;
-}
-.links a {  /* Estilo para los links del footer */
-    text-decoration: none;
-    color: black;
-    font-size: medium;
-    font-weight: bold;
-}
